prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/invalid_type_name.diag.txt
ERROR: Invalid type name 'UnknownType'
testData/diagnostics/compilation_errors/syntax_errors/invalid_type_name.nut:2:16

// EXPECT_ERROR: "Invalid type name"
function foo(x: UnknownType) {
                ^----------
    return x


